k8s/infrastructure/traefik-external/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("traefik.mchill.io", "traefik-external.mchill.io")
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host("auth.mchill.io")
      kind: Rule
      services:
        - name: traefik-clusterip
          port: 4181
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("traefik-external.mchill.lan")
      kind: Rule
      services:
        - name: traefik-clusterip
          port: 9000
